Using js data (#52)
* Adding data discovery notebook

* Updated data discovery method, working on new decoding method using new data

* Added decoder for js data, performed preliminary reverse engineering for key paths.

* Revert naming changes

* Added raw data to results, fixed jupyter notebook to use new decoder types

* Add new protobuf version requirement

* Revert name change of "flights" to "trips"

---------

Co-authored-by: JC <90096971+AWeirdDev@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ classifiers = [
 requires-python = ">=3.8"
 dependencies = [
   "primp",
-  "protobuf",
-  "selectolax"
+  "protobuf>=5.27.0",
+  "selectolax",
 ]
 
 [project.optional-dependencies]
@@ -37,4 +37,13 @@ local = [
 [tool.setuptools]
 packages = [
     "fast_flights"
+]
+
+[tool.pyright]
+pythonVersion = '3.8'
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+    "pip>=25.0.1",
 ]
